--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.2.1",
     "eslint-plugin-node": "^11.1.0",
-    "husky": "^5.1.3",
     "jest": "^26.6.3",
     "jest-environment-node": "^26.6.2",
     "lint-staged": "^10.5.4",
@@ -60,9 +59,11 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "firebase-admin": "^10.0.1",
     "helmet": "^4.4.1",
     "mongoose": "^6.1.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "validator": "^13.7.0"
   },
   "engines": {
     "node": ">=14.0.0"
